--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm ci"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npx serve -s dist -l 3000"
+cmd = "npx serve -s dist -l ${PORT:-3000}"
 
