--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm ci"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npx serve -s dist -l ${PORT:-3000}"
+cmd = "node_modules/.bin/serve -s dist -l $PORT"
 
