--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "serve -s dist -l ${PORT:-3000}",
+    "start": "serve -s dist -l $PORT",
     "collect-readings": "tsx scripts/collect-beliot-readings.ts"
   },
   "dependencies": {
