fix: Add default_server and IPv6 listen directive to nginx config - Added default_server to listen directive for proper port binding - Added IPv6 listen directive for better compatibility - Added netstat check in entrypoint script

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,5 +1,6 @@
 server {
-    listen ${PORT};
+    listen ${PORT} default_server;
+    listen [::]:${PORT} default_server;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
