--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,6 +1,6 @@
 server {
     listen 0.0.0.0:${PORT} default_server;
-    listen [::]:${PORT} default_server;
+    listen [::]:${PORT} default_server ipv6only=on;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
