РћР±РЅРѕРІР»РµРЅРёРµ Р»РѕРіРёРєРё СЃР±РѕСЂР° РґР°РЅРЅС‹С…: РѕРїСЂРѕСЃ Р·Р° 10 РјРёРЅСѓС‚ РґРѕ РѕРєРѕРЅС‡Р°РЅРёСЏ С‡Р°СЃР°, Р·Р°РїРёСЃСЊ Р·Р° С‚РµРєСѓС‰РёР№ С‡Р°СЃ

--- a/.github/workflows/collect-readings.yml
+++ b/.github/workflows/collect-readings.yml
@@ -2,7 +2,9 @@ name: Collect Beliot Readings
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Каждый час в начале часа (00:00, 01:00, 02:00, ...)
+    - cron: '50 * * * *'  # Каждый час в 50 минут (00:50, 01:50, 02:50, ...)
+    # Опрос за 10 минут до окончания часа, данные записываются за текущий час
+    # Например: опрос в 9:50 → запись за 9:00
   workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
