Improve time calculation logic for delayed GitHub Actions runs and add documentation about delays

--- a/.github/workflows/collect-readings.yml
+++ b/.github/workflows/collect-readings.yml
@@ -5,6 +5,12 @@ on:
     - cron: '50 * * * *'  # Каждый час в 50 минут (00:50, 01:50, 02:50, ...)
     # Опрос за 10 минут до окончания часа, данные записываются за текущий час
     # Например: опрос в 9:50 → запись за 9:00
+    # 
+    # ВАЖНО: GitHub Actions может запускаться с задержкой (до 15-30 минут)
+    # Это нормальное поведение и не влияет на корректность данных:
+    # - Скрипт использует время из API для определения часа записи
+    # - ON CONFLICT защищает от дублирования записей
+    # - Задержки не критичны, так как данные записываются каждый час
   workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
