--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.6.0",
     "serve": "^14.2.1"
   },
   "devDependencies": {
