config: ensure test files are excluded from production build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,16 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/__tests__/**",
+    "**/__test__/**"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
