--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "serve -s dist -l $PORT",
-    "collect-readings": "tsx scripts/collect-beliot-readings.ts"
+    "collect-readings": "tsx scripts/collect-beliot-readings.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
@@ -22,12 +26,19 @@
     "serve": "^14.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^25.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^4.0.16",
+    "jsdom": "^27.4.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^4.0.16"
   }
 }
