--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
     "serve": "^14.2.1"
   },
