feat: РґРѕР±Р°РІР»РµРЅР° РґРѕРєСѓРјРµРЅС‚Р°С†РёСЏ Beliot API Рё СЃРєСЂРёРїС‚С‹ РґР»СЏ СЂР°Р±РѕС‚С‹ СЃРѕ СЃС‚Р°С‚РёСЃС‚РёРєРѕР№ РїРѕРєР°Р·Р°РЅРёР№

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview",
     "start": "serve -s dist -l $PORT",
     "collect-readings": "tsx scripts/collect-beliot-readings.ts",
+    "check-statistics": "tsx scripts/check-statistics-endpoints.ts",
+    "save-openapi-spec": "tsx scripts/save-full-openapi-spec.ts",
+    "test-device-readings": "tsx scripts/test-device-readings.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
