РћР±РЅРѕРІР»РµРЅРёРµ СЃРёРЅС…СЂРѕРЅРёР·Р°С†РёРё РїРѕРєР°Р·Р°РЅРёР№: СЃРёРЅС…СЂРѕРЅРёР·Р°С†РёСЏ Р·Р° РїРѕСЃР»РµРґРЅРёРµ 24 С‡Р°СЃР°, СѓРґР°Р»РµРЅРёРµ РЅРµРёСЃРїРѕР»СЊР·СѓРµРјРѕРіРѕ РєРѕРґР°

--- a/.github/workflows/collect-readings.yml
+++ b/.github/workflows/collect-readings.yml
@@ -1,16 +1,22 @@
-name: Collect Beliot Readings
+name: Sync Beliot Readings
 
 on:
   schedule:
     - cron: '50 * * * *'  # Каждый час в 50 минут (00:50, 01:50, 02:50, ...)
-    # Опрос за 10 минут до окончания часа, данные записываются за текущий час
-    # Например: опрос в 9:50 → запись за 9:00
+    # Синхронизация показаний за последние 24 часа (сутки)
     # 
-    # ВАЖНО: GitHub Actions может запускаться с задержкой (до 15-30 минут)
-    # Это нормальное поведение и не влияет на корректность данных:
-    # - Скрипт использует время из API для определения часа записи
+    # НОВАЯ ЛОГИКА:
+    # - Скрипт синхронизирует показания за последние 24 часа от текущего момента
+    # - Получает все показания за сутки из Beliot API (не перегружает запросы)
+    # - Фильтрует на начало каждого часа
+    # - Сохраняет все показания в Supabase
+    # 
+    # ВАЖНО: GitHub Actions может запускаться с задержкой (до 2+ часов)
+    # Это не проблема, так как скрипт синхронизирует данные за последние сутки:
+    # - Даже при задержке в 2+ часа все пропущенные показания будут заполнены
     # - ON CONFLICT защищает от дублирования записей
-    # - Задержки не критичны, так как данные записываются каждый час
+    # - Данные всегда актуальны, независимо от времени запуска
+    # - Запрос только за последние 24 часа не перегружает API
   workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
